<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_nav_search"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/bg_nav_search"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/start_point"/>

        <EditText
            android:id="@+id/et_start_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/bg_input"
            android:paddingLeft="15dp"
            android:text="@string/my_location"
            android:textColor="@color/nav_text_gray"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/end_point"/>

        <EditText
            android:id="@+id/et_end_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/bg_input"
            android:paddingLeft="15dp"
            android:text="@string/p_search_on_map"
            android:textColor="@color/nav_text_gray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:focusable="true"
            android:background="@drawable/btn_nav_selector"
            android:text="@string/search_route"
            android:textColor="@color/btn_gray_text"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/btn_nav_simulation"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:focusable="true"
            android:background="@drawable/btn_nav_selector"
            android:text="@string/nav_simulation"
            android:textColor="@color/btn_gray_text"
            android:textSize="14sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_close_nav_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:background="@drawable/btn_nav_selector"
        android:text="@string/close"
        android:textColor="@color/btn_gray_text"
        android:textSize="14sp"/>

</LinearLayout>
